--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <!-- Scrapbook-style image row -->
   <div class="image-row">
     <div class="side-images">
-      <img src="images/rev.jpg" alt="Side Image 1" class="tilt-left">
-      <img src="images/rev1.jpg" alt="Side Image 2" class="tilt-right">
+      <img src="rev.jpg" alt="Side Image 1" class="tilt-left">
+      <img src="rev1.jpg" alt="Side Image 2" class="tilt-right">
     </div>
 
     <!-- Main image -->
-    <img src="images/her.jpg" alt="My love of my life" class="main-img">
+    <img src="her.jpg" alt="My love of my life" class="main-img">
 
     <div class="side-images">
-      <img src="images/rev2.jpg" alt="Side Image 3" class="tilt-right">
-      <img src="images/rev3.jpg" alt="Side Image 4" class="tilt-left">
+      <img src="rev2.jpg" alt="Side Image 3" class="tilt-right">
+      <img src="rev3.jpg" alt="Side Image 4" class="tilt-left">
     </div>
   </div>
 
@@ -46,4 +46,5 @@ ILOVEYOUSOMUCHH POTATO KO, MY BABY, MY SUGARHONEYBUNCHYY KOOOOO. Mahal na mahal 
   <script src="script.js"></script> <!-- Links to the JS file -->
 </body>
 </html>
+
 
